Move RPC to new process

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -292,8 +292,9 @@ add_subdirectory(nano/crypto_lib)
 add_subdirectory(nano/secure)
 add_subdirectory(nano/lib)
 add_subdirectory(nano/node)
-add_subdirectory(nano/rpc)
 add_subdirectory(nano/nano_node)
+add_subdirectory(nano/rpc)
+add_subdirectory(nano/nano_rpc)
 
 if (NANO_TEST OR RAIBLOCKS_TEST)
     if(WIN32)
