--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -3,11 +3,12 @@ add_executable (core_test
 	testutil.hpp
 	block.cpp
 	block_store.cpp
-	interface.cpp
-	ipc.cpp
+	daemon.cpp
 	conflicts.cpp
 	entry.cpp
 	gap_cache.cpp
+	interface.cpp
+	ipc.cpp
 	ledger.cpp
 	logger.cpp
 	network.cpp
@@ -16,7 +17,6 @@ add_executable (core_test
 	message_parser.cpp
 	processor_service.cpp
 	peer_container.cpp
-	rpc.cpp
 	signing.cpp
 	timer.cpp
 	uint256_union.cpp
