--- a/.gitignore
+++ b/.gitignore
@@ -32,9 +32,13 @@ core_test
 rpc_test
 !rpc_test/
 qt_test
+!qt_test/
 nano_node
+!nano_node/
 nano_wallet
+!nano_wallet/
 slow_test
+!slow_test/
 nano_rpc
 !nano_rpc/
 
