Allow RPC in-process as well

--- a/nano/crypto_lib/CMakeLists.txt
+++ b/nano/crypto_lib/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library (crypto_lib
 	interface.cpp
-	random_pool.cpp
-	random_pool.hpp)
+	randompool.cpp
+	randompool.hpp)
 
  target_link_libraries (crypto_lib
 	blake2
