--- a/nano/rpc/CMakeLists.txt
+++ b/nano/rpc/CMakeLists.txt
@@ -1,17 +1,17 @@
 if (NANO_SECURE_RPC OR RAIBLOCKS_SECURE_RPC)
-	set (secure_rpc_sources rpc_secure.hpp rpc_secure.cpp rpc_connection_secure.hpp rpc_connection_secure.cpp)
+	set (secure_rpc_sources rpcsecure.hpp rpcsecure.cpp rpcconnectionsecure.hpp rpcconnectionsecure.cpp)
 endif ()
 
 add_library (rpc
 	${secure_rpc_sources}
 	rpc.hpp
 	rpc.cpp
-	rpc_connection.hpp
-	rpc_connection.cpp
-	rpc_handler.hpp
-	rpc_handler.cpp
-	rpc_request_processor.hpp
-	rpc_request_processor.cpp)
+	rpcconnection.hpp
+	rpcconnection.cpp
+	rpchandler.hpp
+	rpchandler.cpp
+	rpcrequestprocessor.hpp
+	rpcrequestprocessor.cpp)
 
 target_link_libraries (rpc
 	nano_lib
