Revert filenames to have underscores again for readability

--- a/nano/crypto_lib/CMakeLists.txt
+++ b/nano/crypto_lib/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_library (crypto_lib
 	interface.cpp
-	randompool.cpp
-	randompool.hpp)
+	random_pool.cpp
+	random_pool.hpp)
 
  target_link_libraries (crypto_lib
 	blake2
