--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -26,28 +26,28 @@ add_library (node
 	ipc.cpp
 	ipcconfig.hpp
 	ipcconfig.cpp
-	jsonhandler.hpp
-	jsonhandler.cpp
-	jsonpaymentobserver.hpp	
-	jsonpaymentobserver.cpp
+	json_handler.hpp
+	json_handler.cpp
+	json_payment_observer.hpp	
+	json_payment_observer.cpp
 	lmdb.hpp
 	lmdb.cpp
 	logging.hpp
 	logging.cpp
 	nodeconfig.hpp
 	nodeconfig.cpp
-	nodeobservers.hpp
-	nodeobservers.cpp
-	noderpcconfig.hpp
-	noderpcconfig.cpp
+	node_observers.hpp
+	node_observers.cpp
+	node_rpc_config.hpp
+	node_rpc_config.cpp
 	node.hpp
 	node.cpp
 	openclconfig.hpp
 	openclconfig.cpp
 	openclwork.hpp
 	openclwork.cpp
-	paymentobserverprocessor.hpp
-	paymentobserverprocessor.cpp
+	payment_observer_processor.hpp
+	payment_observer_processor.cpp
 	portmapping.hpp
 	portmapping.cpp
 	repcrawler.hpp
