--- a/nano/slow_test/CMakeLists.txt
+++ b/nano/slow_test/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_executable (slow_test
+	entry.cpp
 	node.cpp)
 
-target_link_libraries (slow_test node secure gtest_main gtest libminiupnpc-static Boost::boost)
+target_link_libraries (slow_test node secure gtest libminiupnpc-static Boost::boost)
