RPC server is moved to a new process (optionally) (#1874)
* Move RPC to new process

* Readd reuse address

* Formatting

* Remove rpc dependency from node CMakeLists.txt file

* Fix rpc.online_reps test

* Only use boost process when using a boost version other than 1.69

* Formatting, add thread name to RPC thread

* Call lock () on the lock itself not mutex

* Allow RPC in-process as well

* Formatting

* Formatting

* Revert filenames to have underscores again for readability

* Use boost interprocess with node daemon as well. Move definitions to CMakeLists.txt

* Delete unused options after migration. Don't migrate version so that an upgrade to the new rpc_config is performed filling in the rest of the options with appropriate defaults.

* Change debug_ipc to debug_rpc

* Removed unused ipc_path from new rpc_config

* Change --daemon CLI help to state it is for the RPC

* Remove rpc_path from load-tester

* Fix global network_constants initialization issue

* Fix session timer timing issue

* Remove default_ipc_port from node_rpc_config::migrate ()

* Remove semi-colon from command line args preventing others below it from working.

* Remove message about failing to migrate RPC path in rpc_config

* Move cleanup_test_directories_on_exit to node to resolve link error with nano_rpc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -157,6 +157,13 @@ endif ()
 
 find_package (Boost 1.67.0 REQUIRED COMPONENTS filesystem log thread program_options system)
 
+# There is a compile bug with boost 1.69 interprocess headers on Mac
+if (APPLE AND Boost_VERSION EQUAL 106900)
+	set (BOOST_PROCESS_SUPPORTED 0)
+else ()
+	set (BOOST_PROCESS_SUPPORTED 1)
+endif ()
+
 add_subdirectory(crypto/ed25519-donna)
 
 set (UPNPC_BUILD_SHARED OFF CACHE BOOL "")
@@ -292,8 +299,9 @@ add_subdirectory(nano/crypto_lib)
 add_subdirectory(nano/secure)
 add_subdirectory(nano/lib)
 add_subdirectory(nano/node)
-add_subdirectory(nano/rpc)
 add_subdirectory(nano/nano_node)
+add_subdirectory(nano/rpc)
+add_subdirectory(nano/nano_rpc)
 
 if (NANO_TEST OR RAIBLOCKS_TEST)
     if(WIN32)
@@ -369,8 +377,13 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 		${RES})
 
 	target_link_libraries (nano_wallet
+		rpc
 		node
 		qt)
+
+	target_compile_definitions(nano_wallet
+		PRIVATE
+			-DBOOST_PROCESS_SUPPORTED=${BOOST_PROCESS_SUPPORTED})
 
 	if (WIN32)
 		target_link_libraries (nano_wallet Qt5::WinExtras)
