Strand and queuing support in tcp socket

--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -17,6 +17,7 @@ add_executable (core_test
 	processor_service.cpp
 	peer_container.cpp
 	signing.cpp
+	socket.cpp
 	timer.cpp
 	uint256_union.cpp
 	versioning.cpp
