Change tsan_blacklist to tsan_clang_blacklist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,7 @@ else ()
 	elseif (${USING_TSAN})
 		add_compile_options(-fsanitize=thread)
 		if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-			add_compile_options("-fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_blacklist")
+			add_compile_options("-fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_clang_blacklist")
 		endif()
 		add_definitions(-DED25519_NO_INLINE_ASM)
 	endif()
@@ -127,7 +127,7 @@ else ()
 	elseif (${USING_TSAN})
 		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=thread")
 		if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-			set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_blacklist")
+			set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_clang_blacklist")
 		endif()
 	endif()
 endif ()
