Add diagnostics config option & allow separate read/write minimum transaction open time tracking

--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -27,6 +27,8 @@ add_library (node
 	confirmation_height_processor.cpp
 	daemonconfig.hpp
 	daemonconfig.cpp
+	diagnosticsconfig.hpp
+	diagnosticsconfig.cpp
 	ipc.hpp
 	ipc.cpp
 	ipcconfig.hpp
