--- a/nanocurrency-beta.spec.in
+++ b/nanocurrency-beta.spec.in
@@ -40,6 +40,7 @@ if [ ! %{buildroot} = "/" ]; then %{__rm} -rf %{buildroot}; fi
 mkdir -p %{buildroot}/usr/bin
 mkdir -p %{buildroot}/etc/systemd/system/
 cp nano_node %{buildroot}/usr/bin/nano_node-beta
+cp nano_rpc %{buildroot}/usr/bin/nano_rpc-beta
 cp etc/systemd/nanocurrency-beta.service %{buildroot}/etc/systemd/system/nanocurrency-beta.service
 
 %clean
