LMDB transaction time tracker (#1947)
* Add MDB lock time tracker

* Update test and add conditional logging

* Remove unnecessary changes

* Modify the minimum time for a lock held before outputting in the log file to 5 seconds (from 10)

* Deference stacktrace not pass pointer...

* Change lock to be txn

* Formatting

* Increase granularity (use milliseconds instead of seconds)

* Update test to use milliseconds in comparison

* Allow erase to be called without error

* Add diagnostics config option & allow separate read/write minimum transaction open time tracking

--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -27,6 +27,8 @@ add_library (node
 	confirmation_height_processor.cpp
 	daemonconfig.hpp
 	daemonconfig.cpp
+	diagnosticsconfig.hpp
+	diagnosticsconfig.cpp
 	ipc.hpp
 	ipc.cpp
 	ipcconfig.hpp
@@ -37,6 +39,8 @@ add_library (node
 	json_payment_observer.cpp
 	lmdb.hpp
 	lmdb.cpp
+	lmdb_txn_tracker.hpp
+	lmdb_txn_tracker.cpp
 	logging.hpp
 	logging.cpp
 	nodeconfig.hpp
