TCP socket rewrite with strand and queueing support (#1938)
* Strand and queuing support in tcp socket

* Check callback validity in async_write, do sync close in tests to avoid address-reuse issue

* Address review items; tests, checking stats

* Remove unrelated websocket changes

* Reintroduce atomic ticket system, but support concurrent writers. Close from destructor, check strand-execution where possible, and fix a test with too low deadline.

* Don't start io operations if closed

* Don't pass bool to join(), use unsigned instead of size_t and return error instead of success in counted_completion

--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -71,6 +71,8 @@ add_library (node
 	transport/udp.cpp
 	signatures.hpp
 	signatures.cpp
+	socket.hpp
+	socket.cpp
 	stats.hpp
 	stats.cpp
 	voting.hpp
