--- a/docker/ci/Dockerfile-gcc
+++ b/docker/ci/Dockerfile-gcc
@@ -17,6 +17,4 @@ RUN rm bootstrap_boost.sh
 RUN apt-get update -qq && apt-get install -yqq \
     qt5-default \
     valgrind \
-    xorg xvfb xauth xfonts-100dpi xfonts-75dpi xfonts-scalable xfonts-cyrillic \
-    cargo
-
+    xorg xvfb xauth xfonts-100dpi xfonts-75dpi xfonts-scalable xfonts-cyrillic
