--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set (NANO_GUI OFF CACHE BOOL "")
 set (NANO_TEST OFF CACHE BOOL "")
 set (NANO_SECURE_RPC OFF CACHE BOOL "")
+set (NANO_FUZZER_TEST OFF CACHE BOOL "")
 
 option(NANO_ASAN_INT "Enable ASan+UBSan+Integer overflow" OFF)
 option(NANO_ASAN "Enable ASan+UBSan" OFF)
@@ -70,6 +71,11 @@ else ()
 		endif()
 		add_definitions(-DED25519_NO_INLINE_ASM)
 	endif()
+
+	if (NANO_FUZZER_TEST)
+		add_compile_options (-fsanitize=fuzzer-no-link -fno-omit-frame-pointer)
+		add_definitions (-DNANO_FUZZER_TEST)
+	endif ()	
 
 	if (CMAKE_SYSTEM_PROCESSOR MATCHES "^(i.86|x86(_64)?)$")
 		if (NANO_SIMD_OPTIMIZATIONS OR RAIBLOCKS_SIMD_OPTIMIZATIONS)
@@ -131,6 +137,10 @@ else ()
 			set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize-blacklist=${PROJECT_SOURCE_DIR}/tsan_clang_blacklist")
 		endif()
 	endif()
+
+	if (NANO_FUZZER_TEST)
+		set (PLATFORM_LINK_FLAGS "${PLATFORM_LINK_FLAGS} -fsanitize=fuzzer-no-link")
+	endif ()
 endif ()
 
 SET( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${PLATFORM_LINK_FLAGS}" )
@@ -299,6 +309,14 @@ add_subdirectory(nano/node)
 add_subdirectory(nano/nano_node)
 add_subdirectory(nano/rpc)
 add_subdirectory(nano/nano_rpc)
+
+if (NANO_FUZZER_TEST)
+	if (NOT WIN32)
+		add_subdirectory (nano/fuzzer_test)
+	else ()
+		message (WARNING "Fuzzing is not supported on Windows")
+	endif ()
+endif ()
 
 if (NANO_TEST OR RAIBLOCKS_TEST)
     if(WIN32)
