fix windows installer path and registry keys to prompt for uninstall before installing a new version. Previous versions should be uninstalled first on windows as the default path and registry keys are updated

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -435,9 +435,10 @@ if (NANO_GUI OR RAIBLOCKS_GUI)
 												WriteRegDWORD HKLM 'SYSTEM\\\\CurrentControlSet\\\\Services\\\\EventLog\\\\Nano\\\\Nano' 'TypesSupported' '0x7'
 												WriteRegStr HKLM 'SYSTEM\\\\CurrentControlSet\\\\Services\\\\EventLog\\\\Nano\\\\Nano' 'EventMessageFile' '$INSTDIR\\\\nano_wallet.exe'")
 		set (CPACK_NSIS_EXTRA_UNINSTALL_COMMANDS "DeleteRegKey HKLM 'SYSTEM\\\\CurrentControlSet\\\\Services\\\\EventLog\\\\Nano'")
+		set (CPACK_PACKAGE_INSTALL_DIRECTORY "nanocurrency")
 		set (CPACK_NSIS_MUI_ICON ${CMAKE_SOURCE_DIR}/Nano.ico)
 		set (CPACK_NSIS_DISPLAY_NAME "Nano")
-		set (CPACK_PACKAGE_NAME "Nano_Installer")
+		set (CPACK_PACKAGE_NAME "nano-node")
 		set (CPACK_NSIS_PACKAGE_NAME "Nano")
 		set (CPACK_NSIS_URL_INFO_ABOUT "https://nano.org")
 		set (CPACK_NSIS_CONTACT "info@nano.org")
