--- a/nano/node/CMakeLists.txt
+++ b/nano/node/CMakeLists.txt
@@ -1,8 +1,15 @@
+if (NANO_ROCKSDB)
+	set (rocksdb_libs ${ROCKSDB_LIBRARIES} ${ZLIB_LIBRARIES})
+endif ()
+
 if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
 	# No opencl
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
 	set (platform_sources plat/windows/openclapi.cpp)
 	set (psapi_lib Psapi)
+	if (NANO_ROCKSDB)
+		set (rocksdb_libs ${rocksdb_libs} Shlwapi Rpcrt4)
+	endif ()
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
 	set (platform_sources plat/posix/openclapi.cpp)
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "FreeBSD")
@@ -110,6 +117,7 @@ target_link_libraries (node
 	Boost::system
 	Boost::thread
 	Boost::boost
+	${rocksdb_libs}
 	${CMAKE_DL_LIBS}
 	${psapi_lib}
 	)
