--- a/docker/ci/Dockerfile-gcc
+++ b/docker/ci/Dockerfile-gcc
@@ -1,7 +1,8 @@
 FROM nanocurrency/nano-env:base
 
+RUN apt-get install -yqq librocksdb-dev
+
 ENV BOOST_ROOT=/usr/local
 ADD util/build_prep/bootstrap_boost.sh bootstrap_boost.sh
 RUN ./bootstrap_boost.sh -m
 RUN rm bootstrap_boost.sh
-
