Update entry script Use ENTRYPOINT CMD instead of CMD to allow for greater flexibility ex. `docker logs <container>` after running with `nano_node --wallet_list` ``` EXECUTING: nano_node --wallet_list
Wallet ID: 4633783D98EFE13AC7884FB8299E39032358575C4DA696B9800C6EB0AD1634A4
nano_1womoper6rkhq1atc9y5rsqr6jzatia9ch4mezmtxdixhip68aibxtuefadz
```
If vacuum limit is set and db size is greater than limit vacuum before launching daemon
container stops if daemon dies allowing docker to restart if configured
This is a change from the how things currently run as the size is not checked and the daemon restarted if over size.
```
Usage:
   /entry.sh nano_node [daemon] [cli_options] [-l] [-v size]
     daemon
       start as daemon
     cli_options
       nano_node cli options <see nano_node --help>
     -l
       log to console <use docker logs {container}>
     -v<size>
       vacuum database if over size GB on startup
   /entry.sh bash [other]
     other
       bash pass through
   /entry.sh [*]
     *
       usage
 default:
   /entry.sh nano_node daemon -l
```

--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -19,4 +19,6 @@ COPY docker/node/entry.sh /entry.sh
 COPY docker/node/config /usr/share/nano/config
 RUN chmod +x /entry.sh
 RUN ln -s /usr/bin/nano_node /usr/bin/rai_node
-CMD ["/bin/bash",  "/entry.sh"]
+ENV PATH="${PATH}:/usr/bin"
+ENTRYPOINT ["/bin/bash",  "/entry.sh"]
+CMD ["nano_node daemon -l"]
