--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ jobs:
         - export PATH="/usr/local/opt/ccache/libexec:$PATH";
     - stage: deploy
       name: "live"
-      if: branch=~/^(master|releases\/v*)
+      if: branch=~/^(master|releases\/v*) AND !tag=~RC
       script: 
         - if [ "$TRAVIS_PULL_REQUEST" = "false" ]; if then [ -n "$DOCKER_PASSWORD" ]; then ci/deploy-docker.sh; fi; fi
     - name: "beta"
