--- a/nano/nano_node/CMakeLists.txt
+++ b/nano/nano_node/CMakeLists.txt
@@ -17,6 +17,7 @@ target_compile_definitions(nano_node
 		-DNANO_VERSION_MAJOR=${CPACK_PACKAGE_VERSION_MAJOR}
 		-DNANO_VERSION_MINOR=${CPACK_PACKAGE_VERSION_MINOR}
 		-DNANO_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH}
+		-DGIT_COMMIT_HASH=${GIT_COMMIT_HASH}
 		-DBOOST_PROCESS_SUPPORTED=${BOOST_PROCESS_SUPPORTED})
 
 set_target_properties (nano_node
