--- a/nano/core_test/CMakeLists.txt
+++ b/nano/core_test/CMakeLists.txt
@@ -1,8 +1,3 @@
-if (NANO_ROCKSDB)
-  set (rocksdb_test rocksdb_test.cpp)
-  set (rocksdb_libs ${ROCKSDB_LIBRARIES} ${ZLIB_LIBRARIES})
-endif ()
-
 add_executable (core_test
 	core_test_main.cc
 	testutil.hpp
@@ -23,11 +18,11 @@ add_executable (core_test
 	memory_pool.cpp
 	processor_service.cpp
 	peer_container.cpp
-	${rocksdb_test}
 	signing.cpp
 	socket.cpp
 	timer.cpp
 	uint256_union.cpp
+	utility.cpp
 	versioning.cpp
 	wallet.cpp
 	wallets.cpp
@@ -41,4 +36,4 @@ target_compile_definitions(core_test
 			-DNANO_VERSION_PATCH=${CPACK_PACKAGE_VERSION_PATCH}
 			-DGIT_COMMIT_HASH=${GIT_COMMIT_HASH}
 			-DBOOST_PROCESS_SUPPORTED=${BOOST_PROCESS_SUPPORTED})
-target_link_libraries (core_test node secure gtest libminiupnpc-static Boost::boost ${rocksdb_libs})
+target_link_libraries (core_test node secure gtest libminiupnpc-static Boost::boost)
