--- a/docker/ci/Dockerfile-clang
+++ b/docker/ci/Dockerfile-clang
@@ -1,7 +1,12 @@
 FROM nanocurrency/nano-env:base
 
 RUN apt-get update -qq && apt-get install -yqq \
-    clang-3.9 lldb-3.9 librocksdb-dev
+    clang-3.9 lldb-3.9 git
+
+RUN git clone https://github.com/facebook/rocksdb.git && \
+    cd rocksdb && \
+    make static_lib && \
+    make install
 
 ENV CXX=/usr/bin/clang++
 ENV CC=/usr/bin/clang
